--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt br">
 <head>
 <meta charset="utf-8">
-<&nbsp;><title>Olá mundo!</title></&nbsp;>
+<&nbsp;><title>Meu site</title></&nbsp;>
 </head>
 <body>
 <p></p>
